# Qubit-Simulation

./: Readme.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: linux_build.yml
backend/: cubits.py  dynamics.py  session_state.py
frontend/: bloch_sphere.py  conclusions.py  dyn.py  how_work.py  main_page.py  scheme.py  shared.py  static.py  stats.py  theory.py
