[project]
name = "qubits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pylatexenc>=2.10",
    "qiskit[visualization]>=1.0,<2.0",
    "qiskit-aer>=0.17.2",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
    "black>=25.12.0",
    "qiskit-dynamics>=0.6,<0.7",
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "numpy>=2.4.0",
]
